<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.3</version>
        <relativePath/>
    </parent>
    <groupId>ru.prod</groupId>
    <artifactId>prod</artifactId>
    <name>prod</name>
    <version>1.0</version>
    <properties>
        <java.version>21</java.version>
        <junit.version>5.9.2</junit.version>
        <mockito.version>5.4.0</mockito.version>
    </properties>
    <dependencies>
        <!-- SPRING -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>RELEASE</version>
        </dependency>

        <!-- SPRING DATA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
        </dependency>
        <dependency>
            <groupId>io.minio</groupId>
            <artifactId>minio</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
            <version>RELEASE</version>
        </dependency>

        <!-- JWT Core -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>RELEASE</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>RELEASE</version>
        </dependency>

        <!-- OTHER -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>RELEASE</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>RELEASE</version>
            <optional>true</optional>
        </dependency>

        <!-- TESTS -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>RELEASE</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>RELEASE</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>RELEASE</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <forkCount>2</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>${surefireArgLine}</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
                            <propertyName>surefireArgLine</propertyName>
                            <excludes>
                                <exclude>ru/prod/common/exception/**</exclude>
                                <exclude>ru/prod/common/config/**</exclude>
                                <exclude>ru/prod/feature/account/mapper/**</exclude>
                                <exclude>ru/prod/feature/account/config/**</exclude>
                                <exclude>ru/prod/feature/account/validator/**</exclude>
                                <exclude>ru/prod/feature/coworking/mapper/**</exclude>
                                <exclude>ru/prod/feature/account/exception/**</exclude>
                                <exclude>ru/prod/entity/**</exclude>
                                <exclude>ru/prod/feature/account/help/**</exclude>
                                <exclude>ru/prod/feature/coworking/exception/**</exclude>
                                <exclude>ru/prod/ProdApplication.class</exclude>
                                <exclude>ru/prod/feature/coworking/controller/**</exclude>
                                <exclude>ru/prod/common/security/jwt/**</exclude>
                                <exclude>ru/prod/feature/account/controller/**</exclude>
                                <exclude>ru/prod/feature/account/dto/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
                            <excludes>
                                <exclude>ru/prod/common/exception/**</exclude>
                                <exclude>ru/prod/common/config/**</exclude>
                                <exclude>ru/prod/feature/account/mapper/**</exclude>
                                <exclude>ru/prod/feature/account/config/**</exclude>
                                <exclude>ru/prod/feature/account/validator/**</exclude>
                                <exclude>ru/prod/feature/coworking/mapper/**</exclude>
                                <exclude>ru/prod/feature/account/exception/**</exclude>
                                <exclude>ru/prod/entity/**</exclude>
                                <exclude>ru/prod/feature/account/help/**</exclude>
                                <exclude>ru/prod/feature/coworking/exception/**</exclude>
                                <exclude>ru/prod/ProdApplication.class</exclude>
                                <exclude>ru/prod/feature/coworking/controller/**</exclude>
                                <exclude>ru/prod/common/security/jwt/**</exclude>
                                <exclude>ru/prod/feature/account/controller/**</exclude>
                                <exclude>ru/prod/feature/account/dto/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.70</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                            <excludes>
                                <exclude>ru/prod/common/exception/**</exclude>
                                <exclude>ru/prod/common/config/**</exclude>
                                <exclude>ru/prod/feature/account/mapper/**</exclude>
                                <exclude>ru/prod/feature/account/config/**</exclude>
                                <exclude>ru/prod/feature/account/validator/**</exclude>
                                <exclude>ru/prod/feature/coworking/mapper/**</exclude>
                                <exclude>ru/prod/feature/account/exception/**</exclude>
                                <exclude>ru/prod/entity/**</exclude>
                                <exclude>ru/prod/feature/account/help/**</exclude>
                                <exclude>ru/prod/feature/coworking/exception/**</exclude>
                                <exclude>ru/prod/ProdApplication.class</exclude>
                                <exclude>ru/prod/feature/coworking/controller/**</exclude>
                                <exclude>ru/prod/common/security/jwt/**</exclude>
                                <exclude>ru/prod/feature/account/controller/**</exclude>
                                <exclude>ru/prod/feature/account/dto/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <pluginRepositories>
        <pluginRepository>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>
</project>
